@@ -13,7 +13,8 @@
 -- doc tweaks
 -- fixed flow reset ordering of operations
 -- changed stream to not generate rebuilt packets when the splitter doesn't
-   reassemble (ie nhttp internal sections)
+   reassemble packets (ie nhttp internal buffers)
+-- added rebuilt buffers count
 
 125
 -- discovered can't catch exceptions thrown from Lua to C++; need to
